--- a/app/src/main/res/layout/activity_connections.xml
+++ b/app/src/main/res/layout/activity_connections.xml
@@ -14,12 +14,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <EditText
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
-            android:id="@+id/textView"
+            android:id="@+id/result_text"
+            android:inputType="text"
             android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:onClick="sendPacket"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:gravity="center"
+            android:text="Send" />
+
     </LinearLayout>
 </ScrollView>
