revorked socket connections to use Thread

--- a/app/src/main/res/layout/activity_connections.xml
+++ b/app/src/main/res/layout/activity_connections.xml
@@ -29,5 +29,10 @@
             android:gravity="center"
             android:text="Send" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/log" />
+
     </LinearLayout>
 </ScrollView>
