--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,8 +6,13 @@
         <item name="android:colorPrimaryDark">@color/primaryDark</item>
         <item name="android:colorAccent">@color/accent</item>
         <item name="android:colorButtonNormal">@color/primaryDark</item>
-        <item name="android:textColorPrimary">@color/accent</item>
-        <item name="android:textColorSecondary">@color/accent</item>
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/gray</item>
+    </style>
+
+    <style name="AppTheme.Dark" parent="AppTheme">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:windowBackground">@color/black</item>
     </style>
 
     <style name="AppTheme.Login" parent="AppTheme">
