--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <!-- Login margins -->
     <dimen name="activity_login_margin_bottom">50dp</dimen>
+    <!-- Connection list items -->
+    <dimen name="connection_list_item_height">50dp</dimen>
+    <dimen name="connection_list_item_image_margin">18dp</dimen>
 </resources>
