--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,18 +4,20 @@
     <style name="AppTheme" parent="@android:style/Theme.Material.Light.DarkActionBar">
         <item name="android:colorPrimary">@color/primary</item>
         <item name="android:colorPrimaryDark">@color/primaryDark</item>
-        <item name="android:colorAccent">@color/accent</item>
         <item name="android:colorButtonNormal">@color/primaryDark</item>
-        <item name="android:textColorPrimary">@color/white</item>
-        <item name="android:textColorSecondary">@color/gray</item>
     </style>
 
-    <style name="AppTheme.Dark" parent="AppTheme">
+    <style name="AppTheme.Dark" parent="@android:style/Theme.Material">
         <item name="android:textColor">@color/white</item>
         <item name="android:windowBackground">@color/black</item>
+        <item name="android:colorPrimary">@color/primary</item>
+        <item name="android:colorPrimaryDark">@color/primaryDark</item>
     </style>
 
     <style name="AppTheme.Login" parent="AppTheme">
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/gray</item>
+        <item name="android:colorAccent">@color/white</item>
         <item name="android:windowBackground">@color/primary</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowActionBar">false</item>
