added presets list fragment added fabs in lists added builder methods for fragments and some future sqlite functionality placeholders

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <!-- Connection list items -->
     <dimen name="connection_list_item_height">50dp</dimen>
     <dimen name="connection_list_item_image_margin">18dp</dimen>
+    <dimen name="connection_list_fab_margin">16dp</dimen>
 </resources>
