--- a/app/src/main/res/layout/fragment_presets.xml
+++ b/app/src/main/res/layout/fragment_presets.xml
@@ -2,20 +2,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.easyapp.mobilepad.ConnectionsListFragment">
+    tools:context="com.easyapp.mobilepad.PresetsFragment">
 
     <ListView
-        android:id="@+id/connections_list"
+        android:id="@+id/presets_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/connections_list_fab"
         android:theme="@style/Theme.AppCompat"
+        android:id="@+id/presets_list_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
         android:layout_margin="@dimen/connection_list_fab_margin"
+        android:layout_gravity="bottom|right"
         android:clickable="true"
         android:src="@android:drawable/ic_input_add" />
 
